@@ -1,3 +1,7 @@
+2006-08-31  Scott James Remnant  <scott@netsplit.com>
+
+	* POTFILES.in: Add new sources from util and compat/sysv directories.
+
 2006-08-24  Scott James Remnant  <scott@netsplit.com>
 
 	* POTFILES.in: Add nih/file.c and nih/option.c,
